feat: add api and code updates related to subscription update
made a separate dto model for updates. expanded swagger api with additional errors as well
